Ingresando El Encabezado en HTML

--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
 <html lang="en">
 
 <head>
-    <title>Alquimia</title>
+    <title>Alquimia Mental</title>
     <link rel="stylesheet" href="../csss/tp2_4.css">
 </head>
 
 <body>
-
-    <!--header menu-->
-    <header class="header">
-
-        <div class="menu container">
-            <a href="#" class="logo">Alquimia Mental</a>
+ <!--ENCABEZADO-->
+ <header class="encabezado-principal">
+    <!--TODO EL CONTENIDO DEL ENCABEZADO-->
+    <div class="encabezado container">
+        <!--LOGO de BARRA y del SITIO WEB-->
+        <div class="logo">
+            <a href="#" class="logo-alquimia">Alquimia</a>
+            <!--Logo en Barra
             <input type="checkbox" id="menu">
-            <label for="menu">
-                <img src="../imagenes/logo.png" class="menu-icono" alt="">
-            </label>
-            <nav class="barra_menu">
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
-                    <li><a href="#">Servicios</a></li>
-                </ul>
-            </nav>
+            <label for="menu">    
+            <img src="img/menu.png" class="barra-menu" alt="">
+            </label>-->
         </div>
+        <!--NAVEGADOR DE ENLACES-->
+        <nav class="navegacion-menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Barra de Access</a></li>
+                <li><a href="#">Reiki</a></li>
+                <li><a href="#">Tameana</a></li>
+            </ul>
+        </nav>
+    </div>
 
-        <!--Contenido del menu del header-->
-        <div class="header-content container">
-            <h1>Alquimia Mental</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id optio nam itaque sequi, laboriosam vitae ratione aspernatur non iusto culpa, fuga voluptatibus cupiditate quidem. Quisquam similique molestiae accusamus alias magni!
-            </p>
-            <a href="#" class="boton-1">Enlace a una pag-principal o otra</a>
-        </div>
-    </header>
+    <!--Contenido del Encabezado y su Informacion-->
+    <div class="encabezado-content container">
+        <h1>Alquimia Mental</h1>
+        <p>La alquimi mental es un concepto fascinante que explica que explora la transformacion interior y la capacidad de cambiar nuestra percepcion y experiencia de la realidad. En lugar de modificar elementos fisicos,como en la alquimia tradicional
+            y mental se enfocan en la transformacion de nuestra mente y espiritu.
+        </p>
+        <a href="#" class="boton-1">Enlace a una pag</a>
+    </div>
+</header>
 
     <section class="Piedras Bonitas">
 
