--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Alquimia Mental</title>
-    <link rel="stylesheet" href="../csss/tp2_4.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
@@ -40,93 +40,50 @@
     </div>
 </header>
 
-    <section class="Piedras Bonitas">
+<main class="general">
+    <section>
+        <img
+          src="https://m.media-amazon.com/images/M/MV5BMjQwNTgxMTEwNl5BMl5BanBnXkFtZTgwNDc4MjkzNTM@._V1_QL75_UX1230_.jpg"
+          alt=""
+        />
+        <img
+          src="https://m.media-amazon.com/images/M/MV5BMTk0OTc5Njg5M15BMl5BanBnXkFtZTgwNTc4MjkzNTM@._V1_QL75_UX1230_.jpg"
+          alt=""
+        />
+        <img
+          src="https://m.media-amazon.com/images/M/MV5BMTg1MjMwNTQ3MF5BMl5BanBnXkFtZTgwMDg4MjkzNTM@._V1_QL75_UX1230_.jpg"
+          alt=""
+        />
+        <img
+          src="https://m.media-amazon.com/images/M/MV5BMjA5OTY5NTE3Nl5BMl5BanBnXkFtZTgwOTU4MjkzNTM@._V1_QL75_UX1230_.jpg"
+          alt=""
+        />
+        <img
+          src="https://m.media-amazon.com/images/M/MV5BMjAzNjY4NzE4N15BMl5BanBnXkFtZTgwNTY4MjkzNTM@._V1_QL75_UX1230_.jpg"
+          alt=""
+        />
+      </section>
+    <div class="title">
+        <h1>Alquimia Mental</h1>
+    </div>
+    <div class="parrafos">
+        <div class="parrafo1">
+            <p>La alquimia mental es un concepto fascinante que explora la transformación interior y la capacidad de cambiar nuestra percepción y experiencia de la realidad. En lugar de modificar elementos físicos, como en la alquimia tradicional, la alquimia mental se enfoca en la transformación de nuestra mente y espíritu.</p>
 
-        <img class="piedras-img" src="../imagenes/piedra2.jfif" alt="">
-
-        <div class="piedra-content container">
-            <h2>Los Distintos Tipos de Piedras</h2>
-            <p class="text-p">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita eum iusto sit repellendus quae amet maiores? At veritatis nam debitis dolore ullam velit modi natus tenetur in expedita, dolorem unde.
-            </p>
-
-            <div class="piedras-group">
-                <div class="piedra-1">
-                    <img src="../imagenes/obra2.jfif" alt="">
-                    <h3>Piedra bonita 1</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus omnis dolorum, quos neque voluptatum quidem blanditiis
-                    </p>
-                </div>
-                <div class="piedra-1">
-                    <img class="" src="../imagenes/obra3.jfif" alt="">
-                    <h3>Piedra bonita 2</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus omnis dolorum, quos neque voluptatum quidem blanditiis
-                    </p>
-                </div>
-                <div class="piedra-1">
-                    <img src="../imagenes/obra4.jfif" alt="">
-                    <h3>Piedra bonita 3</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus omnis dolorum, quos neque voluptatum quidem blanditiis
-                    </p>
-                </div>
-            </div>
-            <a href="#" class="boton-1 ">Enlace a una pag-principal o otra</a>
         </div>
-
-    </section>
-
-    <!--MAIN SE USA UNA SOLA VEZ. ACA AGREGO MI CONTENIDO PRINCIPAL-->
-    <main class="services">
-
-        <div>
-            <h2>Alquimia y Servicios y Obras</h2>
-
-            <div class="services-group">
-
-                <div class="servicios-1">
-                    <h3>Servicio 1</h3>
-                    <img src="../imagenes/luna.png" alt="">
-                </div>
-                <div class="servicios-1">
-                    <h3>Servicio 2</h3>
-                    <img src="../imagenes/piedrita.png" alt="">
-                </div>
-                <div class="servicios-1">
-                    <h3>Servicio 3</h3>
-                    <img src="../imagenes/pieddriss.png" alt="">
-
-                </div>
-
-            </div>
-
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam voluptatum blanditiis delectus molestias perferendis! Quos ratione, nihil a incidunt cupiditate, aliquam repellat provident illo illum corrupti adipisci architecto, aspernatur ad!
-            </p>
-            <a href="#">Enlace a una pag-principal o otra</a>
+        <div class="p2">
+            <p> Existen varias formas de entender y aplicar la alquimia mental. Una de ellas se centra en la transmutación de emociones negativas en positivas. Esto implica aprender a regular nuestras emociones, elevando su "frecuencia vibratoria" para que trabajen a nuestro favor en lugar de controlarnos. Por ejemplo, podríamos aprender a transformar el miedo en confianza, o la tristeza en una aceptación serena.</p>
         </div>
-    </main>
-
-    <section class="muestra">
-        <div class="proyecto-1">
-            <h2>Proyecto u/o Obra de Piedras 1</h2>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum est veniam expedita, nihil corporis aliquid eligendi, consequatur beatae adipisci rerum velit cum. Cumque consequatur fugit alias id voluptas dolore delectus.
+        <div class="p3">
+            <p>Otra interpretación de la alquimia mental se enfoca en integrar los aspectos dispersos de la mente y el espíritu. Este enfoque busca unir elementos internos que, en el estado común de conciencia, suelen estar desconectados o en conflicto. Simbólicamente, esta práctica implica elevar lo inconsciente y material hacia el nivel de consciencia, permitiéndonos acceder a una mayor claridad, sentido y coherencia en nuestra vida.
             </p>
-            <a href="#" class="boton-1">Enlace a una pag-principal o otra</a>
         </div>
-        <div class="proyecto-2"></div>
-    </section>
+    </div>
+    <div>
 
-    <section class="muestra">
-        <div class="proyecto-3"></div>
-        <div class="proyecto-1">
-            <h2>Proyecto u/o Obra de Piedras 2</h2>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum est veniam expedita, nihil corporis aliquid eligendi, consequatur beatae adipisci rerum velit cum. Cumque consequatur fugit alias id voluptas dolore delectus.
-            </p>
-            <a href="#" class="boton-1">Enlace a una pag-principal o otra</a>
-        </div>
-    </section>
+    </div>
+    </div>
+</main>
 
     <footer class="footer">
 
