--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Alquimia Mental</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -85,23 +86,19 @@
     </div>
 </main>
 
-    <footer class="footer">
+<footer class="footer">
 
-        <div class="footer-content container">
-            <div class="links">
-                <h3>Contactos</h3>
-                <ul>
-                    <label for="text">Gmail</label>
-                    <li><a href="#">*******@gmail.com</a></li>
-                    <label for="text">Telefono</label>
-                    <li><a href="#">299-585-0733</a></li>
-                    <li><a href="https://www.instagram.com/alqimia.metal/">INSTAGRAM</a>a</li>
-                    <li><a href="#">LINKEDLN</a></li>
-                </ul>
-            </div>
-        </div>
+    <div class="footer-content container">
+        <div class="links">
+            <h3>info</h3>
+        <p>Alquimia mental|<a href="https://maps.app.goo.gl/1mHbZr4fpmykdTY36">Almte. Brown 20</a>|NEUQUEN|<a href="tel:+542995850733">Contacto</a></p>
+        <section class="buttons">
+        <p>siguenos en:<a href="https://www.instagram.com/alqimia.mental/"  class="fa fa-instagram"></a></p>
+        </section>
 
-    </footer>
+    </div>
+
+</footer>
 
 
 </body>
