Modificacion de la estructura del HTML y se le suma nuevas paginas HTML

--- a/index.html
+++ b/index.html
@@ -13,20 +13,16 @@
     <div class="encabezado container">
         <!--LOGO de BARRA y del SITIO WEB-->
         <div class="logo">
-            <a href="#" class="logo-alquimia">Alquimia</a>
-            <!--Logo en Barra
-            <input type="checkbox" id="menu">
-            <label for="menu">    
-            <img src="img/menu.png" class="barra-menu" alt="">
-            </label>-->
+            <a href="index.html" class="logo-alquimia">Alquimia</a>
+            <!--Logo en Barra-->
         </div>
         <!--NAVEGADOR DE ENLACES-->
         <nav class="navegacion-menu">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Barra de Access</a></li>
-                <li><a href="#">Reiki</a></li>
-                <li><a href="#">Tameana</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="CSS/Barra_Access.css">Barra de Access</a></li>
+                <li><a href="CSS/Reiki.css">Reiki</a></li>
+                <li><a href="CSS/Tameana.css">Tameana</a></li>
             </ul>
         </nav>
     </div>
