--- a/index.html
+++ b/index.html
@@ -38,31 +38,49 @@
 </header>
 
 <main class="general">
-    <section>
+    <section class="inicio">
         <img
-          src="https://m.media-amazon.com/images/M/MV5BMjQwNTgxMTEwNl5BMl5BanBnXkFtZTgwNDc4MjkzNTM@._V1_QL75_UX1230_.jpg"
+          src="alquimia1.jpg"
           alt=""
         />
         <img
-          src="https://m.media-amazon.com/images/M/MV5BMTk0OTc5Njg5M15BMl5BanBnXkFtZTgwNTc4MjkzNTM@._V1_QL75_UX1230_.jpg"
+          src="alquimia3.jpg"
           alt=""
         />
         <img
-          src="https://m.media-amazon.com/images/M/MV5BMTg1MjMwNTQ3MF5BMl5BanBnXkFtZTgwMDg4MjkzNTM@._V1_QL75_UX1230_.jpg"
-          alt=""
-        />
-        <img
-          src="https://m.media-amazon.com/images/M/MV5BMjA5OTY5NTE3Nl5BMl5BanBnXkFtZTgwOTU4MjkzNTM@._V1_QL75_UX1230_.jpg"
-          alt=""
-        />
-        <img
-          src="https://m.media-amazon.com/images/M/MV5BMjAzNjY4NzE4N15BMl5BanBnXkFtZTgwNTY4MjkzNTM@._V1_QL75_UX1230_.jpg"
+          src="alquimia2.jpg"
           alt=""
         />
       </section>
+      <section class="cabecera">
+        <ul class="lista-cabecera">
+            <li class="lista1">
+                <div class="infol1">
+                    <img src="ta" alt="">
+                    <h3>Titulo1</h3>
+                    <p>Informacion del titulo 1</p>
+                </div>
+            </li>
+            <li class="lista2">
+                <div class="infol2">
+                    <img src="" alt="">
+                    <h3>Titulo 2</h3>
+                    <p>Informacion del titulo 2</p>
+                </div>
+            </li>
+            <li class="lista3">
+                <div class="infol3">
+                    <img src="" alt="">
+                    <h3>Titulo 3</h3>
+                    <p>Informacion del titulo 3</p>
+                </div>
+            </li>
+        </ul>
+    </section>
     <div class="title">
         <h1>Alquimia Mental</h1>
     </div>
+    
     <div class="parrafos">
         <div class="parrafo1">
             <p>La alquimia mental es un concepto fascinante que explora la transformación interior y la capacidad de cambiar nuestra percepción y experiencia de la realidad. En lugar de modificar elementos físicos, como en la alquimia tradicional, la alquimia mental se enfoca en la transformación de nuestra mente y espíritu.</p>
@@ -72,8 +90,7 @@
             <p> Existen varias formas de entender y aplicar la alquimia mental. Una de ellas se centra en la transmutación de emociones negativas en positivas. Esto implica aprender a regular nuestras emociones, elevando su "frecuencia vibratoria" para que trabajen a nuestro favor en lugar de controlarnos. Por ejemplo, podríamos aprender a transformar el miedo en confianza, o la tristeza en una aceptación serena.</p>
         </div>
         <div class="p3">
-            <p>Otra interpretación de la alquimia mental se enfoca en integrar los aspectos dispersos de la mente y el espíritu. Este enfoque busca unir elementos internos que, en el estado común de conciencia, suelen estar desconectados o en conflicto. Simbólicamente, esta práctica implica elevar lo inconsciente y material hacia el nivel de consciencia, permitiéndonos acceder a una mayor claridad, sentido y coherencia en nuestra vida.
-            </p>
+            <p>En conjunto, la alquimia mental es una práctica de crecimiento personal y espiritual que pretende desarrollar una mayor conciencia y control sobre nuestras emociones y pensamientos. Nos invita a un proceso de autoconocimiento y autorregulación que puede conducir a un estado de bienestar y armonía interior más profundo.</p>
         </div>
     </div>
     <div>
