--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 <main class="general">
     <section class="inicio">
         <img
-          src="alquimia1.jpg"
+          src="/IMG/alquimia1.jpg"
           alt=""
         />
         <img
-          src="alquimia3.jpg"
+          src="/IMG/alquimia3.jpg"
           alt=""
         />
         <img
-          src="alquimia2.jpg"
+          src="/IMG/alquimia2.jpg"
           alt=""
         />
       </section>
@@ -112,8 +112,5 @@
     </div>
 
 </footer>
-
-
 </body>
-
 </html>
