orden de partes

--- a/index.html
+++ b/index.html
@@ -1,116 +1,93 @@
 <html lang="en">
 
 <head>
-    <title>Alquimia Mental</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <title>Alquimiiiiiiia</title>
+    <link rel="stylesheet" href="../css/style2.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 </head>
 
 <body>
- <!--ENCABEZADO-->
- <header class="encabezado-principal">
-    <!--TODO EL CONTENIDO DEL ENCABEZADO-->
-    <div class="encabezado container">
-        <!--LOGO de BARRA y del SITIO WEB-->
-        <div class="logo">
-            <a href="index.html" class="logo-alquimia">Alquimia</a>
-            <!--Logo en Barra-->
+    <div class="general">
+
+        <header class="encabezado-principal">
+            <!--TODO EL CONTENIDO DEL ENCABEZADO-->
+            <div class="encabezado container">
+                <!--LOGO de BARRA y del SITIO WEB-->
+                <div class="logo">
+                    <img src="../img/logo.jfif" alt="logo">
+                    <a href="aja.html">Alquimia</a>
+                    <!--Logo en Barra-->
+                </div>
+                <div class="barra-menu"><!--NAVEGADOR DE ENLACES-->
+                <nav class="navegacion-menu">
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="CSS/Barra_Access.css">Servicios</a></li>
+                        <li><a href="CSS/Reiki.css">Principios</a></li>
+                        <li><a href="CSS/Tameana.css">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <!--NAVEGADOR DE ENLACES-->
-        <nav class="navegacion-menu">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="CSS/Barra_Access.css">Barra de Access</a></li>
-                <li><a href="CSS/Reiki.css">Reiki</a></li>
-                <li><a href="CSS/Tameana.css">Tameana</a></li>
-            </ul>
-        </nav>
-    </div>
+        </header>
 
-    <!--Contenido del Encabezado y su Informacion-->
-    <div class="encabezado-content container">
-        <h1>Alquimia Mental</h1>
-        <p>La alquimi mental es un concepto fascinante que explica que explora la transformacion interior y la capacidad de cambiar nuestra percepcion y experiencia de la realidad. En lugar de modificar elementos fisicos,como en la alquimia tradicional
-            y mental se enfocan en la transformacion de nuestra mente y espiritu.
-        </p>
-        <a href="#" class="boton-1">Enlace a una pag</a>
-    </div>
-</header>
+            <section class="cabecera">
+                <ul class="lista-cabecera">
+                    <li class="lista1">
+                        <div class="infol1">
+                            <img src="" alt="">
+                            <h3>Titulo1</h3>
+                            <p>Informacion del titulo 1</p>
+                        </div>
+                    </li>
+                    <li class="lista2">
+                        <div class="infol2">
+                            <img src="" alt="">
+                            <h3>Titulo 2</h3>
+                            <p>Informacion del titulo 2</p>
+                        </div>
+                    </li>
+                    <li class="lista3">
+                        <div class="infol3">
+                            <img src="" alt="">
+                            <h3>Titulo 3</h3>
+                            <p>Informacion del titulo 3</p>
+                    </div>
+                    </li>
+                </ul>
+            </section>
+            <div class="title">
+                <h1>Alquimia Mental</h1>
+            </div>
+            <div class="parrafos">
+                <div class="parrafo1">
+                    <p>La alquimia mental es un concepto fascinante que explora la transformación interior y la capacidad de cambiar nuestra percepción y experiencia de la realidad. En lugar de modificar elementos físicos, como en la alquimia tradicional, la alquimia mental se enfoca en la transformación de nuestra mente y espíritu.
+                    </p>
+                </div>
+                <div class="p2">
+                    <p>Existen varias formas de entender y aplicar la alquimia mental. Una de ellas se centra en la transmutación de emociones negativas en positivas. Esto implica aprender a regular nuestras emociones, elevando su "frecuencia vibratoria" para que trabajen a nuestro favor en lugar de controlarnos. Por ejemplo, podríamos aprender a transformar el miedo en confianza, o la tristeza en una aceptación serena.
+                    </p>
+                </div>
+                <div class="p3">
+                    <p>En conjunto, la alquimia mental es una práctica de crecimiento personal y espiritual que pretende desarrollar una mayor conciencia y control sobre nuestras emociones y pensamientos. Nos invita a un proceso de autoconocimiento y autorregulación que puede conducir a un estado de bienestar y armonía interior más profundo.</p>
+                </div>
+            </div>
 
-<main class="general">
-    <section class="inicio">
-        <img
-          src="/IMG/alquimia1.jpg"
-          alt=""
-        />
-        <img
-          src="/IMG/alquimia3.jpg"
-          alt=""
-        />
-        <img
-          src="/IMG/alquimia2.jpg"
-          alt=""
-        />
-      </section>
-      <section class="cabecera">
-        <ul class="lista-cabecera">
-            <li class="lista1">
-                <div class="infol1">
-                    <img src="ta" alt="">
-                    <h3>Titulo1</h3>
-                    <p>Informacion del titulo 1</p>
+            <footer>
+                <div class="footer-content container">
+                    <div class="links">
+                        <h3>info</h3>
+                        <p>Alquimia mental<a href="https://maps.app.goo.gl/1mHbZr4fpmykdTY36">Almte. Brown 20</a>|NEUQUEN|<a href="tel:+542995850733">Contacto</a></p>
+                        <section class="buttons">
+                            <p>siguenos en:<a href="https://www.instagram.com/alqimia.mental/"  class="fa fa-instagram"></a></p>
+                        </section>
+                    </div>
                 </div>
-            </li>
-            <li class="lista2">
-                <div class="infol2">
-                    <img src="" alt="">
-                    <h3>Titulo 2</h3>
-                    <p>Informacion del titulo 2</p>
-                </div>
-            </li>
-            <li class="lista3">
-                <div class="infol3">
-                    <img src="" alt="">
-                    <h3>Titulo 3</h3>
-                    <p>Informacion del titulo 3</p>
-                </div>
-            </li>
-        </ul>
-    </section>
-    <div class="title">
-        <h1>Alquimia Mental</h1>
-    </div>
+            </footer>
+        
+        </div>
     
-    <div class="parrafos">
-        <div class="parrafo1">
-            <p>La alquimia mental es un concepto fascinante que explora la transformación interior y la capacidad de cambiar nuestra percepción y experiencia de la realidad. En lugar de modificar elementos físicos, como en la alquimia tradicional, la alquimia mental se enfoca en la transformación de nuestra mente y espíritu.</p>
 
-        </div>
-        <div class="p2">
-            <p> Existen varias formas de entender y aplicar la alquimia mental. Una de ellas se centra en la transmutación de emociones negativas en positivas. Esto implica aprender a regular nuestras emociones, elevando su "frecuencia vibratoria" para que trabajen a nuestro favor en lugar de controlarnos. Por ejemplo, podríamos aprender a transformar el miedo en confianza, o la tristeza en una aceptación serena.</p>
-        </div>
-        <div class="p3">
-            <p>En conjunto, la alquimia mental es una práctica de crecimiento personal y espiritual que pretende desarrollar una mayor conciencia y control sobre nuestras emociones y pensamientos. Nos invita a un proceso de autoconocimiento y autorregulación que puede conducir a un estado de bienestar y armonía interior más profundo.</p>
-        </div>
-    </div>
-    <div>
-
-    </div>
-    </div>
-</main>
-
-<footer class="footer">
-
-    <div class="footer-content container">
-        <div class="links">
-            <h3>info</h3>
-        <p>Alquimia mental|<a href="https://maps.app.goo.gl/1mHbZr4fpmykdTY36">Almte. Brown 20</a>|NEUQUEN|<a href="tel:+542995850733">Contacto</a></p>
-        <section class="buttons">
-        <p>siguenos en:<a href="https://www.instagram.com/alqimia.mental/"  class="fa fa-instagram"></a></p>
-        </section>
-
-    </div>
-
-</footer>
 </body>
 </html>
