Terminacion del index

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 
 <head>
-    <title>Alquimiiiiiiia</title>
-    <link rel="stylesheet" href="../css/style2.css">
+    <title>Alquimia Mental</title>
+    <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 </head>
@@ -15,19 +15,26 @@
             <div class="encabezado container">
                 <!--LOGO de BARRA y del SITIO WEB-->
                 <div class="logo">
-                    <img src="../img/logo.jfif" alt="logo">
-                    <a href="aja.html">Alquimia</a>
+                    <img src="/img//logo.jfif" alt="logo">
+                    <a href="index.html">ALQUIMIA Mental</a>
                     <!--Logo en Barra-->
                 </div>
                 <div class="barra-menu"><!--NAVEGADOR DE ENLACES-->
-                <nav class="navegacion-menu">
-                    <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="CSS/Barra_Access.css">Servicios</a></li>
-                        <li><a href="CSS/Reiki.css">Principios</a></li>
-                        <li><a href="CSS/Tameana.css">Contacto</a></li>
-                    </ul>
-                </nav>
+                    <nav class="navegacion-menu">
+                        <ul>
+                          <li><a href="index.html">Inicio</a></li>
+                          <li class="menu-desplegable">
+                            <a href="servicios.html">Servicios</a>
+                            <ul class="submenu">
+                              <li><a href="barra_acces.html">Barra de acces</a></li>
+                              <li><a href="reiki.html">Reiki</a></li>
+                              <li><a href="tamaena.html">Tamaena</a></li>
+                            </ul>
+                          </li>
+                          <li><a href="CSS/Reiki.css">Principios</a></li>
+                          <li><a href="CSS/Tameana.css">Contacto</a></li>
+                        </ul>
+                      </nav>
             </div>
         </div>
         </header>
@@ -37,22 +44,38 @@
                     <li class="lista1">
                         <div class="infol1">
                             <img src="" alt="">
-                            <h3>Titulo1</h3>
-                            <p>Informacion del titulo 1</p>
+                            <h2>BARRAS ACCESS</h2>
+                            <ul>
+                                <li>Liberan creencias limitantes,</li>
+                                <li>reducen el estrés</li>
+                                <li>promueven claridad mental</li>
+                                <li>genera mayor calma mental y posibilidades en la vida </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="lista2">
                         <div class="infol2">
                             <img src="" alt="">
-                            <h3>Titulo 2</h3>
-                            <p>Informacion del titulo 2</p>
+                            <h2>TAMEANA</h2>
+                            <ul>
+                                <li> Libera bloqueos emocionales</li>
+                                <li>reduce el estrés</li>
+                                <li> eleva la vibración energética</li>
+                                <li>promueve el equilibrio y bienestar través de cuarzos</li>
+                            </ul>
                         </div>
                     </li>
                     <li class="lista3">
                         <div class="infol3">
                             <img src="" alt="">
-                            <h3>Titulo 3</h3>
-                            <p>Informacion del titulo 3</p>
+                            <h2>REIKI</h2>
+                            <ul>
+                                <li> Reduce el estrés</li>
+                                <li>equilibra emociones</li>
+                                <li>mejora la salud física </li>
+                                <li>promueve bienestar general</li>
+                                <li> libera bloqueos energéticos</li>
+                            </ul>
                     </div>
                     </li>
                 </ul>
