--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
                     <a href="index.html">ALQUIMIA Mental</a>
                     <!--Logo en Barra-->
                 </div>
-                <div class="barra-menu"><!--NAVEGADOR DE ENLACES-->
-                    <nav class="navegacion-menu">
-                        <ul>
-                          <li><a href="index.html">Inicio</a></li>
-                          <li class="menu-desplegable">
-                            <a href="servicios.html">Servicios</a>
-                            <ul class="submenu">
-                              <li><a href="barra_acces.html">Barra de acces</a></li>
-                              <li><a href="reiki.html">Reiki</a></li>
-                              <li><a href="tamaena.html">Tamaena</a></li>
-                            </ul>
-                          </li>
-                          <li><a href="CSS/Reiki.css">Principios</a></li>
-                          <li><a href="CSS/Tameana.css">Contacto</a></li>
-                        </ul>
-                      </nav>
-            </div>
+                
         </div>
         </header>
-
+        <div class="barra-menu"><!--NAVEGADOR DE ENLACES-->
+            <nav class="navegacion-menu">
+                <ul>
+                  <li><a href="index.html">Inicio</a></li>
+                  <li class="menu-desplegable">
+                    <a href="servicios.html">Servicios</a>
+                    <ul class="submenu">
+                      <li><a href="barra_acces.html">Barra de acces</a></li>
+                      <li><a href="reiki.html">Reiki</a></li>
+                      <li><a href="tamaena.html">Tamaena</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="CSS/Reiki.css">Principios</a></li>
+                  <li><a href="CSS/Tameana.css">Contacto</a></li>
+                </ul>
+              </nav>
+    </div>
             <section class="cabecera">
                 <ul class="lista-cabecera">
                     <li class="lista1">
@@ -100,10 +100,11 @@
             <footer>
                 <div class="footer-content container">
                     <div class="links">
-                        <h3>info</h3>
+                        <h3>Informacion</h3>
                         <p>Alquimia mental<a href="https://maps.app.goo.gl/1mHbZr4fpmykdTY36">Almte. Brown 20</a>|NEUQUEN|<a href="tel:+542995850733">Contacto</a></p>
                         <section class="buttons">
-                            <p>siguenos en:<a href="https://www.instagram.com/alqimia.mental/"  class="fa fa-instagram"></a></p>
+                            <p>siguenos en:</p>
+                            <a href="https://www.instagram.com/alqimia.mental/"  class="fa fa-instagram"></a>
                         </section>
                     </div>
                 </div>
